updated CV based on current experience

--- a/CV_Katmaieva_table2205.html
+++ b/CV_Katmaieva_table2205.html
@@ -65,7 +65,6 @@
 				<center><h1> Katmaieva Iryna</h1>
 				<h2>QA Engineer</h2>
 				<p> Kyiv, Ukraine<br>
-				Phone: +380 (99) 797-47-64<br>
 				E-mail: <a href="mailto:katmaeva@ukr.net">katmaeva@ukr.net</a></p></center>
 				<br>
 				<h2>Languages:</h2>
@@ -75,21 +74,31 @@
 				<h2>Summary:</h2>
 					<ul>
 					<li>ISTQB Certified Tester, Foundation Level;</li>
-					<li>Understanding of SDLC, including iterative modes of software development (Scrum);</li>
+					<li>Automation testing in JavaScript;</li>
+					<li>Experience with agile modes of software development (Scrum and Kanban);</li>
 					<li>Knowledge of basic test design techniques (Equivalence Partitioning, BVA, Decision Table);</li>
-					<li>Basic understanding of SQL, HTML, CSS, Selenium IDE;</li>
-					<li>Knowledge of Jira bug-tracking system;</li>
-					<li>Understanding of Google Analytics and Yandex.Metrica;</li>
-					<li>Fast learner, detail-oriented</li>
-					</ul>
-				<h3>Practical Experience within SkillUP QA Training Program:</h3>
-					<ul>
-					<li>Test plan and test strategy preparation;</li>
-					<li>Conducting mobile testing of the mobile application;</li>
-					<li>Preparation of test cases, RTMs and check lists for website manual testing;</li>
-					<li>Preparation of test suits using Selenium IDE for website automation testing</li>
+					<li>Experience with Visual Studio and WebStorm</li>
+					<li>Experience with TeamCity, GitHub, Swagger, Splunk;</li>
+					<li>Experience with TFS and AWS;</li>
+					<li>Experience with Protractor, Jasmine and Mocha;</li>
+					<li>Responsible and detail-oriented</li>
 					</ul>
 				<h2>Experience:</h2>
+					<i>2019-Now<br>
+					EPAM</i>
+					<ul>
+					<li>Automation QA<br>
+					- UI automation testing in JavaScript, using Protractor e2e test framework; knowledge of Mocha test framework with Chai assertion library;<br>
+					- Creation and maintenance of API tests using Jasmine test framework;<br>
+					- Review of test cases covering existing functionality, creation of new test cases;<br>
+					- Regression and smoke testing;<br>
+					- Code review, fix of flaky tests and tests maintenance;<br>
+					- Analysis and documentation of defects using bug tracking systems (Jira);<br>
+					- Validation of bug-fixes;<br>
+					- Backlog refinement (tasks investigation and analysis of manual tests to be automated);<br>
+					- Planning of testing activity based on test documentation analysis<br>
+					</li>
+					<br>
 					<i>2013-Feb 2019<br>
 					Kreston GCG Advisory</i>
 					<ul>
@@ -139,7 +148,6 @@
 		<tr>
 			<td id="td_bottom">
 				<p>Contact me via е-mail: <a href="mailto:katmaeva@ukr.net">katmaeva@ukr.net</a><br>
-				Phone: +380 (99) 797-47-64<br>
 				LinkedIN: <a href="https://www.linkedin.com/in/iryna-katmaieva">linkedin.com/in/iryna-katmaieva</a>
 				</p>
 			</td>
